--- a/index.html
+++ b/index.html
@@ -18,35 +18,16 @@
           </div>
           <div class="sj">
             <div class="inpot">
-              <input type="text" placeholder="  HoW u DoIn" />
+              <input type="text" id="myInput" placeholder="  HoW u DoIn" />
             </div>
-            <button class="button">Submit</button>
+            <span onclick="newElement()" class="addBtn button">Add</span>
           </div>
         </div>
         <div class="list">
-          <ol>
-            <hr/>
-            <li>iteam1</li>
-            <hr />
-            <li>iteam2</li>
-            <hr />
-            <li>iteam3</li>
-            <hr />
-            <li>iteam4</li>
-            <hr />
-            <li>iteam5</li>
-            <hr />
-            <li>iteam6</li>
-            <hr />
-            <li>iteam7</li>
-            <hr />
-            <li>iteam8</li>
-            <hr />
+          <ol id="myUL">
           </ol>
         </div>
-        <div class="downButton">
-          <button class="button">Submit</button>
-        </div>
+        <script src="app.js"></script>
       </div>
     </div>
   </body>
