--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="inpot">
               <input type="text" id="myInput" placeholder="  HoW u DoIn" />
             </div>
-            <span onclick="newElement()" class="addBtn button">Add</span>
+            <button onclick="newElement()" class="addBtn button">Add</button>
           </div>
         </div>
         <div class="list">
